# manual-translator

./: .env.example  .gitignore  CLAUDE.md  PRD_traduttore_manuali_pdf.md  README.md  glossary.yaml  pyproject.toml
docs/superpowers/plans/: 2026-06-27-manualtrans-m1.md  2026-06-29-manualtrans-m2-layout.md  2026-06-30-manualtrans-visual-fidelity.md
docs/superpowers/specs/: 2026-06-27-manualtrans-m1-design.md  2026-06-29-manualtrans-m2-layout-design.md  2026-06-30-manualtrans-visual-fidelity-design.md
manualtrans/: __init__.py  assemble.py  cache.py  check.py  color.py  config.py  glossary.py  layout.py  main.py  models.py  ocr.py  pagerender.py  prompt.py  render.py  translate.py
tests/: test_assemble.py  test_cache.py  test_check.py  test_cli.py  test_color.py  test_config.py  test_glossary.py  test_layout.py  test_models.py  test_ocr.py  test_pagerender.py  test_prompt.py  test_render.py  test_translate.py
