[project]
name = "manualtrans"
version = "0.1.0"
description = "Translate ham-radio PDF manuals (EN/ZH) to Italian, preserving structure"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mistralai>=1.0",
    "weasyprint>=69.0",
]

[project.scripts]
manualtrans = "manualtrans.main:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
